--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-
+<h1>Bem-vindo à sua conta</h1>
+<!-- Link para a tela de transferência -->
+<a href="/transferencia">Fazer Transferência</a>
 </body>
 </html>
