--- a/front-end/Home/style.css
+++ b/front-end/Home/style.css
@@ -75,8 +75,11 @@ body {
     cursor: pointer;
   }
   .seta img{
-      width: 25px;
-      height: 25px;
+      cursor: pointer;
+      margin-left: -12px;
+      margin-top: 5px;
+      width: 19px;
+      height: 19px;
   }
   .navi img{
       width: 10px;
