feat: landing page finalizada no java

--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
