--- a/Banco GOI/src/main/webapp/templates/login.html
+++ b/Banco GOI/src/main/webapp/templates/login.html
@@ -6,6 +6,7 @@
     <!-- Use caminhos absolutos para garantir que os recursos sejam encontrados -->
     <link rel="stylesheet" href="/static/css/login.css">
     <title>GOI Bankline - 24h</title>
+    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
 </head>
 <body>
 <header>
