--- a/Banco GOI/src/main/webapp/templates/cadastro.html
+++ b/Banco GOI/src/main/webapp/templates/cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="/static/css/cadastro.css">
+    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
