--- a/Banco GOI/src/main/webapp/templates/transferencia.html
+++ b/Banco GOI/src/main/webapp/templates/transferencia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Transferência</title>
     <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
 </head>
 <body>
 <header>
