--- a/Banco GOI/src/main/webapp/static/css/cadastro.css
+++ b/Banco GOI/src/main/webapp/static/css/cadastro.css
@@ -52,12 +52,15 @@
   input[type="text"],
   input[type="email"],
   input[type="tel"],
+  input[type="date"],s
   button {
     width: 100%;
     padding: 12px;
     margin-bottom: 18px;
     border-radius: 4px;
     font-size: 16px;
+    border: 1px solid #ccc;
+
   }
 
   /* Inputs */
