--- a/Banco GOI/src/main/webapp/templates/cadastro.html
+++ b/Banco GOI/src/main/webapp/templates/cadastro.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="/static/css/cadastro.css">
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -17,12 +16,14 @@
     <p class="subtitulo">Leva apenas alguns minutos.</p>
 
     <form action="/cadastro" method="post">
-
         <label for="nome">Nome completo</label>
         <input type="text" id="nome" name="nome" required>
 
         <label for="cpf">CPF</label>
         <input type="text" id="cpf" name="cpf" required>
+
+        <label for="dataNascimento">Data de Nascimento</label>
+        <input type="date" id="dataNascimento" name="dataNascimento" required>
 
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
@@ -30,8 +31,12 @@
         <label for="celular">Celular</label>
         <input type="tel" id="celular" name="celular" required>
 
+        <label for="cep">CEP</label>
+        <input type="text" id="cep" name="cep" required>
+
         <button type="submit">Continuar</button>
     </form>
 </div>
 </body>
+<script src="/static/js/cadastro.js"></script>
 </html>
