--- a/front-end/extrato/style.css
+++ b/front-end/extrato/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .tabela-wrapper {
-  max-height: 480px;
+  max-height: 500px;
   overflow-y: auto;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -31,13 +31,14 @@ body {
 .extrato-tabela {
   width: 100%;
   border-collapse: collapse;
+  min-width: 680px;
 }
 
 .extrato-tabela thead {
   position: sticky;
   top: 0;
   background-color: #f1f1f1;
-  z-index: 1;
+  z-index: 2;
 }
 
 .extrato-tabela th, .extrato-tabela td {
