--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -51,7 +51,7 @@
             </li>
             <li>
                 <img src="/static/img/export_notes.png" alt="Imagem de extrato">
-                <a href="#">extrato</a>
+                <a href="/extrato">extrato</a>
                 <img src="/static/img/arrow_right.png" alt="Seta para extrato" class="seta-sidebar">
             </li>
         </ul>
