fix: nome de usuário na home e nas transferências pelo extrato

--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -25,7 +25,7 @@
 </header>
 
 <div class="container-principal">
-    <h3>Olá Fulano, que bom te ver por aqui!</h3>
+    <h3 id="boasVindas">Olá Fulano, que bom te ver por aqui!</h3>
     <img src="/static/img/visibility.png" alt="Visibilidade" class="visibilidade" id="toggle-visibility">
     <aside class="sidebar">
         <ul class="sidebar__list">
