--- a/Banco GOI/src/main/webapp/templates/transferencia.html
+++ b/Banco GOI/src/main/webapp/templates/transferencia.html
@@ -125,5 +125,17 @@
 
 
 <script src="static/js/transferencia.js"></script>
+
+<!-- overlay de loading (fica escondido) -->
+<div id="loadingOverlay" class="overlay hidden">
+    <div class="loader">
+        <svg class="ring" viewBox="0 0 80 80">
+            <circle class="track"    cx="40" cy="40" r="35"/>
+            <circle class="progress" cx="40" cy="40" r="35"/>
+        </svg>
+        <span id="loaderPercent">0&nbsp;%</span>
+    </div>
+</div>
+
 </body>
 </html>
